Werkende faders op dashboard

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -23,7 +23,8 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    
+
+    <script src="js/fader.js"></script>
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 </body>
 
