--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
@@ -8,16 +8,13 @@
     <link rel="stylesheet" href="css/app.css" />
     <link href="css/tailwind.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png" />
     <script src="https://kit.fontawesome.com/02a9a67be2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="status-bar-safe-area"></div>
-
     <div id="app">Loading...</div>
-
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
